--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
